--- a/style1.css
+++ b/style1.css
@@ -29,10 +29,10 @@ body {
   padding: 20px 10px;
 }
 
-.gallery img {
+.gallery img, video{
   width: 100%;
   max-width: 350px;
-  height: 300px;
+  height: 350px;
   object-fit: cover;
   border-radius: 10px;
 }
